classDiagram
    %% ============================================
    %% MODULE: People
    %% ============================================
    
    %% onDelete: restrict
    class Person {
        +id: int
        +first_name: string
        +last_name: string
        +title: string
        +role: enum
        +email: string
        +phone: string
        +date_of_birth: date
        +sex: enum
        +grade: string
        +school: string
        +bio: text
        +photo: media
        +is_adult: boolean
        +login_enabled: boolean
        +background_check_status: enum
        +volunteer_tier: enum
        +total_events: int
        +open_to_employment: boolean
        +specializations: string[]
        +created_at: date
    }
    Content <|-- Person
    Metro "1" -- "0..*" Person : metro
    

    
    %% ============================================
    %% MODULE: Place
    %% ============================================
    
    %% onDelete: restrict
    class Metro {
        +id: int
        +name: string
        +slug: string
        +coordinator_email: string
        +short_url_domain: string
    }
    
    %% onDelete: cascade
    class Venue {
        +id: int
        +name: string
        +address: string
        +parking_instructions: text
        +building_entry_instructions: text
        +capacity: int
        +has_computers: boolean
    }
    Metro "1" -- "0..*" Venue : metro
    Org "0..1" -- "0..*" Venue : Org
    
    %% onDelete: restrict
    class Org {
        +id: int
        +name: string
        +org_type: enum
        +website: string
        +contact_email: string
        +can_deliver_events: boolean
        +can_host_events: boolean
    }
    Metro "1" -- "0..*" Org : metro
    
    %% onDelete: restrict
    class Flyer {
        +id: int
        +name: string
        +distribution_date: date
        +distribution_count: int
        +design_file: media
        +utm_source: string
        +utm_campaign: string
        +total_reach: int
    }
    
    %% onDelete: setNull
    class JobPosting {
        +id: int
        +title: string
        +description: richtext
        +hourly_rate: string
        +hours_per_week: string
        +requirements: text
        +status: enum
        +posted_date: date
    }
    Org "1" -- "0..*" JobPosting : Org
    Metro "1" -- "0..*" JobPosting : metro
    
    %% ============================================
    %% MODULE: Event
    %% ============================================
    
    %% onDelete: restrict
    class Event {
        +id: int
        +slug: string
        +title: string
        +blurb: string
        +short_description: text
        +description: text
        +instructions: text
        +enroll: text
        +event_date: date
        +start_time: time
        +end_time: time
        +capacity: int
        +available_slots: int
        +registration_type: enum
        +status: enum
        +walk_in_count: int
        +page_views: int
        +register_clicks: int
        +reference: string %% optional external reference ID
    }
    Metro "1" -- "0..*" Event : metro
    Venue "1" -- "0..*" Event : venue
    Org "0..1" -- "0..*" Event : Org
    Flyer "0..*" -- "0..*" Event : flyer_event
    EventPrototype "0..1" -- "0..*" Event : prototype
    
    %% onDelete: restrict
    class EventPrototype {
    }
    Event <|-- EventPrototype
    
    %% onDelete: setNull
    class Tag {
        +id: int
        +name: string
        +slug: string
    }
    Event "0..*" -- "0..*" Tag : event_tag
    
    %% onDelete: cascade
    class Registration {
        +id: int
        +registration_source: enum
        +utm_source: string
        +utm_campaign: string
        +created_at: date
        +notes: text
    }
    Event "1" -- "0..*" Registration : event
    Person "1" -- "0..*" Registration : registrant
    
    %% onDelete: cascade
    class RSVP {
        +id: int
        +role: enum
        +relationship: enum
        +attended: boolean
        +checked_in_at: datetime
        +notes: text
    }
    Registration "1" -- "0..*" RSVP : registration
    Event "1" -- "0..*" RSVP : event
    Person "1" -- "0..*" RSVP : attendee
    Person "0..1" -- "0..*" RSVP : guardian
